styles.css
* {
  margin: 0.01em;
  padding: 0.01em;
  box-sizing: border-box;
  font-size: 20px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
}

body {
  background: #e5e5e5;
  min-height: 100vh;
  max-width: 100%;
}

/* @media (min-width: 375px) { */
.container {
  display: flex;
  background: #ffff;
  border-radius: 0.05vw 0.05vw 0.05vw 30vw;
  flex-direction: column;
  background-image: url("images/header-shapes-mobile.png");
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: 100%;
  position: absolute;
  overflow-x: hidden;
  width: 100%;
  min-height: 100vh;
}

a:link {
  text-decoration: none;
}

ul,
li {
  list-style: none;
}

.topnav {
  align-items: center;
  padding: 0.2em;
}

.navi {
  /* border: 2px solid; */
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  font-size: 18px;
  padding: 0.5rem;
}

.bar {
  display: block;
  width: 20px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #396df2;
}

.hamburger.active .bar:nth-child(2) {
  opacity: 0;
}

.hamburger.active .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
  background-color: #fff;
}

.hamburger.active .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
  background-color: #fff;
}

.nav-menu {
  position: fixed;
  left: -100%;
  top: 0;
  gap: 0;
  background-image: url("images/mobile-menu-background.svg");
  mix-blend-mode: multiply;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  width: 100%;
  height: 100%;
  opacity: 100%;
  display: flex;
  flex-direction: column;
  text-align: center;
  transition: 0.3s;
}

.nav-item-1,
.nav-item-2,
.nav-item-3 {
  margin-top: 80px;
  margin-bottom: -50px;
}

.nav-item-3 a,
.nav-item-2 a,
.nav-item-1 a {
  padding-left: 25px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: #fff;
  font-size: 32px;
  line-height: 44px;
  font-weight: 600;
  opacity: 1;
}

.nav-menu.active {
  left: 0;
}

.desktop-links {
  display: none;
}

.next-line::before {
  content: '\a';
  white-space: pre;
}

.next-line {
  font-size: 40px;
}

.new-line {
  font-size: 16px;
}

.logo img {
  border: 2px solid;
  height: 60px;
  border-radius: 50%;
}

.intro {
  display: flex;
  flex-direction: column;
  margin-top: 50px;
  padding: 20px;
  flex: 1;
}

h1 {
  height: 16%;
  width: 327px;
  left: 24px;
  top: 114px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  margin-bottom: 10px;
}

.intro p {
  width: 327px;
  left: 24px;
  top: 276px;
  margin-bottom: 10px;
  font-family: 'Poppins', sans-serif;
  color: #344563;
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
}

.con {
  display: flex;
  flex-direction: row;
  color: #7f8cff;
}

.main-soc {
  padding-left: 20px;
  padding-top: 20px;
}

.about-button {
  padding-left: 15px;
}

.socials {
  display: flex;
  align-items: flex-start;
  margin-left: 1vw;
  width: 95%;
  list-style: none;
  padding-left: 20px;
}

.socials-main {
  display: flex;
  align-items: flex-start;
  width: 95%;
  gap: 5px;
  list-style: none;
}

.socials li {
  display: flex;
  padding: 15px;
  margin-left: -19px;
}

.socials a {
  text-decoration: none;
  color: #6070ff;
  font-weight: 700;
}

a:hover {
  fill: blue;
  cursor: pointer;
}

.socials a:active {
  fill: blue;
}

/* end of page 1 styling */

/* card 1 styling */
.margin-top {
  margin-top: 100vh;
}

.work-container {
  border: 1px solid #cbcdd1;
  display: grid;
  grid-template-columns: auto;
  justify-content: center;
  align-content: center;
  text-align: left;
  width: 95%;
  margin-top: 15vh;
  margin-left: auto;
  margin-right: auto;
  padding: 50px;
  gap: 12px;
  background: #fff;
  border-radius: 16px;
}

.modal {
  position: fixed;
  display: none;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  overflow: auto;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
}

.work-content-modal {
  border: 1px solid #cbcdd1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: left;
  width: 95%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 30px;
  padding: 20px;
  gap: 12px;
  background: #fff;
  border-radius: 16px;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}

.portfolio-modal-img img {
  width: 100%;
  padding: 10px;
  align-self: center;
}

.tonic-def-modal {
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  text-align: justify;
}

.prop-modal {
  display: flex;
  margin-top: -25px;
}

.tonic0-modal {
  margin-bottom: 30px;
}

.modal-button {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  gap: 20px;
  overflow: hidden;
}

.line {
  width: 100%;
}

#modalBtn-1,
#modalBtn-0 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  color: #396df2;
  height: 60px;
  width: 175px;
  border-radius: 8px;
  background-color: white;
  border: 2px solid #6070ff;
  cursor: pointer;
}

.closeBtn {
  text-align: right;
  font-size: 30px;
  color: #67798e;
  cursor: pointer;
}

.closeBtn:hover {
  color: black;
}

.portfolio-img {
  width: 339px;
  height: 220px;
  border-radius: 8px;
  margin-top: -9%;
}

h2 {
  height: 150px;
  width: 327px;
  left: 24px;
  top: 114px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  margin-bottom: 10px;
}

.portfolio-img img {
  width: 335px;
  height: 215px;
  border-radius: 8px;
}

.work-content {
  display: flex;
  flex-direction: column;
  font-family: 'Poppins', sans-serif;
  gap: 25px;
  justify-content: flex-start;
}
/* ... */

